# CrewAI-Agentic-Social-Profiling

./: README.md
agentManagerPerCrew/: .gitignore  README.md  profiling_report.md
agentManagerPerCrew/src/company_sim/: main.py
agentManagerPerCrew/src/company_sim/crews/dev/: crew.py
agentManagerPerCrew/src/company_sim/crews/hr/: crew.py
agentManagerPerCrew/src/company_sim/crews/marketing/: crew.py
agentManagerPerCrew/src/company_sim/crews/profiling/: crew.py
agentManagerPerCrew/src/company_sim/crews/sales/: crew.py
agentManagerPerCrew/src/company_sim/tools/: discord_tools.py
generalAgentManager/: .gitignore  README.md  report.md
generalAgentManager/src/company_sim/: main.py
generalAgentManager/src/company_sim/crews/dev/: crew.py
generalAgentManager/src/company_sim/crews/hr/: crew.py
generalAgentManager/src/company_sim/crews/manager/: crew.py
generalAgentManager/src/company_sim/crews/marketing/: crew.py
generalAgentManager/src/company_sim/crews/profiling/: crew.py
generalAgentManager/src/company_sim/crews/sales/: crew.py
generalAgentManager/src/company_sim/tools/: discord_tools.py
generalAgentManager/src/company_sim/utils/: discord_logger.py
oneProfiledCrew/: report.md
oneProfiledCrew/src/company_sim/tools/: discord_tools.py
singleProfiledCrew/: README.md  pyproject.toml
singleProfiledCrew/src/company_sim/: main.py
singleProfiledCrew/src/company_sim/crews/dev/: crew.py
singleProfiledCrew/src/company_sim/crews/dev/config/: agents.yaml
singleProfiledCrew/src/company_sim/crews/hr/config/: tasks.yaml
(+24 files in other folders)
