[project]
name = "company_sim"
version = "0.1.0"
description = "company_sim using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[tools]==1.7.2",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "fastapi-sso>=0.17.0",
    "litellm>=1.75.3",
]

[project.scripts]
company_sim = "company_sim.main:run_crew"
run_crew = "company_sim.main:run_crew"
train = "company_sim.main:train"
replay = "company_sim.main:replay"
test = "company_sim.main:test"
run_with_trigger = "company_sim.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
